@@ -1,3 +1,10 @@
+2014-11-10  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/examp.fs (env-sound-interp,
+	granulated-sound-interp): use vct instead of with-sound.
+
+	* src/object.c (fth_object_cycle_set): fixed.
+
 2014-11-06  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/examp.fs (env-sound-interp,
